--- a/resources/views/ad-detail/default.twig
+++ b/resources/views/ad-detail/default.twig
@@ -2,9 +2,9 @@
 
 {% block styles %}
     {{ asset_style('visiosoft.module.advs::css/fotorama.css') }}
-    {{ asset_style('visiosoft.theme.sahibinden::css/sahibinden.css') }}
+    {{ asset_style('visiosoft.extension.sahibinden_style_provider::css/sahibinden.css') }}
     {{ asset_style('visiosoft.module.advs::css/detail.css') }}
-    {{ asset_style('visiosoft.theme.sahibinden::css/detail.css') }}
+    {{ asset_style('visiosoft.extension.sahibinden_style_provider::css/detail.css') }}
 {% endblock %}
 
 {% block breadcrumb %}
