--- a/resources/views/ad-detail/partials/detail.twig
+++ b/resources/views/ad-detail/partials/detail.twig
@@ -13,7 +13,7 @@
                     {% endif %}
                 {% else %}
                     <h6 class="a-sahibinden-type">
-                        {{ trans('visiosoft.theme.sahibinden::field.ask_for_price') }}
+                        {{ trans('visiosoft.extension.sahibinden_style_provider::field.ask_for_price') }}
                     </h6>
                 {% endif %}
             {% endif %}
@@ -27,7 +27,7 @@
         </h3>
         <h2 class="d-none d-sm-block {{ adv.is_get_adv == "1" and adv.stock != "0" and adv.stock is not empty ? 'border-0': false }}">
             {% set lastCatId = categories|last['id'] %}
-            {% if setting_value('visiosoft.theme.sahibinden::show_country') %}
+            {% if setting_value('visiosoft.extension.sahibinden_style_provider::show_country') %}
                 {{ adv.country_name }}
                 <span>/</span>
             {% endif %}
@@ -60,13 +60,13 @@
                 </li>
                 {% if not setting_value('visiosoft.module.advs::ads_date_hidden') %}
                     <li class="row m-0">
-                        <div class="col-md-6 p-0 m-0 font-weight-bold">{{ trans('visiosoft.theme.sahibinden::field.ad_date.name') }}</div>
+                        <div class="col-md-6 p-0 m-0 font-weight-bold">{{ trans('visiosoft.extension.sahibinden_style_provider::field.ad_date.name') }}</div>
                         <div class="col-md-6 p-0 m-0">{{ adv.created_at|date(config_get('streams::datetime.date_format')) }}</div>
                     </li>
                 {% endif %}
             {% endif %}
             {{ addBlock('ad-detail/content',{'features_detail':features,'adv':adv})|raw }}
-            {% if setting_value('visiosoft.theme.sahibinden::show_view_count') %}
+            {% if setting_value('visiosoft.extension.sahibinden_style_provider::show_view_count') %}
                 <li class="row m-0">
                     <div class="col-md-6 p-0 m-0 font-weight-bold">{{ trans('visiosoft.module.advs::field.views') }}</div>
                     <div class="col-md-6 p-0 m-0 font-weight-bold viewed-ad-count">{{ adv.count_show_ad }}</div>
