--- a/resources/views/ad-detail/partials/slider.twig
+++ b/resources/views/ad-detail/partials/slider.twig
@@ -21,14 +21,14 @@
                 <div class="col-6">
                     <a href="#" class="a-sahibinden-type" onclick="fotorama.requestFullScreen()">
                         <i class="fas fa-search"></i>
-                        {{ trans('visiosoft.theme.sahibinden::field.mega_photo.name') }}
+                        {{ trans('visiosoft.extension.sahibinden_style_provider::field.mega_photo.name') }}
                     </a>
                 </div>
                 <div class="col-6 text-right">
                     <button class="a-sahibinden-type{% if not adv.video_url %} text-secondary{% endif %} border-0"
                             data-toggle="modal" data-target="#adv-video" {% if adv.video_url is null %}disabled{% endif %}>
                         <i class="fas fa-video"></i>
-                        {{ trans('visiosoft.theme.sahibinden::field.video.name') }}
+                        {{ trans('visiosoft.extension.sahibinden_style_provider::field.video.name') }}
                     </button>
                 </div>
             </div>
@@ -59,4 +59,4 @@
     {{ asset_add("scripts.js", "visiosoft.module.cloudinary::js/close-btn.js") }}
 {% endif %}
 {{ asset_add("scripts.js", "visiosoft.module.advs::js/fotorama.js") }}
-{{ asset_add("scripts.js", "visiosoft.theme.sahibinden::js/slider.js") }}
+{{ asset_add("scripts.js", "visiosoft.extension.sahibinden_style_provider::js/slider.js") }}
