--- a/resources/views/ad-detail/main.twig
+++ b/resources/views/ad-detail/main.twig
@@ -10,7 +10,7 @@
             </h1>
         </div>
 
-        <div class="m-0 justify-content-end pull-right {{ setting_value('visiosoft.theme.sahibinden::show_report_fav') ? '' : 'd-none' }} d-sm-flex text-nowrap align-items-center">
+        <div class="m-0 justify-content-end pull-right {{ setting_value('visiosoft.extension.sahibinden_style_provider::show_report_fav') ? '' : 'd-none' }} d-sm-flex text-nowrap align-items-center">
             {{ addBlock('ad-detail/title/action', {'adv_id':adv.id, 'sahibinden':true})|raw }}
             <div class="classified-title-share">
             <a href="https://www.facebook.com/sharer/sharer.php?u={{ url_current()|url_encode }}"
