--- a/resources/css/sahibinden.css
+++ b/resources/css/sahibinden.css
@@ -1180,11 +1180,10 @@ border-bottom: 2px solid {{ adDetailColor ? adDetailColor : '#ffc000' }};
 
 @media only screen and (max-width: 576px) {
 
-    .a-sahibinden-type.add-fav small,.classified-title .classified-title-share {
-        display: none !important;
-    }
-
     .classified-description .nav-fill .nav-item {
         height: 55px !important;
     }
+}
+.classified-title-share ~ .share-nav-btn{
+    display: none;
 }
