--- a/resources/views/ad-detail/main.twig
+++ b/resources/views/ad-detail/main.twig
@@ -12,25 +12,27 @@
 
         <div class="m-0 justify-content-end pull-right {{ setting_value('visiosoft.extension.sahibinden_style_provider::show_report_fav') ? '' : 'd-none' }} d-sm-flex text-nowrap align-items-center">
             {{ addBlock('ad-detail/title/action', {'adv_id':adv.id, 'sahibinden':true})|raw }}
+            <a class="fa fa-share-alt share-nav-btn link-unstyled" href="javascript:"
+               data-toggle="modal" data-target="#shareModal"></a>
             <div class="classified-title-share">
-            <a href="https://www.facebook.com/sharer/sharer.php?u={{ url_current()|url_encode }}"
-               class="a-sahibinden-type pl-2"
-               onclick="javascript:window.open(this.href, '', 'menubar=no,toolbar=no,resizable=yes,scrollbars=yes,height=300,width=600');return false;"
-               target="_blank">
-                <i class="fab fa-facebook color-facebook-icon"></i>
-            </a>
-            <a href="http://twitter.com/share?url={{ url_current()|url_encode }}"
-               class="a-sahibinden-type pl-2">
-                <i class="fab fa-twitter color-twitter-icon"></i>
-            </a>
-            <a href="https://www.linkedin.com/sharing/share-offsite/?url={{ app.request.uri }}"
-               target="_blank" class="a-linkedin-type pl-2">
-                <i class="fab fa-linkedin"></i>
-            </a>
-            <a href="https://wa.me/?text={{ setting_value('visiosoft.extension.sahibinden_style_provider::shareWhatsappMsg')|url_encode }}%20{{ app.request.uri|url_encode }}"
-               target="_blank" class="a-sahibinden-type pl-2">
-                <i class="fab fa-whatsapp color-whatsapp-icon"></i>
-            </a>
+                <a href="https://www.facebook.com/sharer/sharer.php?u={{ url_current()|url_encode }}"
+                   class="a-sahibinden-type pl-2"
+                   onclick="javascript:window.open(this.href, '', 'menubar=no,toolbar=no,resizable=yes,scrollbars=yes,height=300,width=600');return false;"
+                   target="_blank">
+                    <i class="fab fa-facebook color-facebook-icon"></i>
+                </a>
+                <a href="http://twitter.com/share?url={{ url_current()|url_encode }}"
+                   class="a-sahibinden-type pl-2">
+                    <i class="fab fa-twitter color-twitter-icon"></i>
+                </a>
+                <a href="https://www.linkedin.com/sharing/share-offsite/?url={{ app.request.uri }}"
+                   target="_blank" class="a-linkedin-type pl-2">
+                    <i class="fab fa-linkedin"></i>
+                </a>
+                <a href="https://wa.me/?text={{ setting_value('visiosoft.extension.sahibinden_style_provider::shareWhatsappMsg')|url_encode }}%20{{ app.request.uri|url_encode }}"
+                   target="_blank" class="a-sahibinden-type pl-2">
+                    <i class="fab fa-whatsapp color-whatsapp-icon"></i>
+                </a>
             </div>
         </div>
     </div>
@@ -239,6 +241,8 @@
                     </div>
                 {% endif %}
             </div>
+            {{ addBlock('ad-detail/title/bottom-action', {'adv_id':adv.id, 'sahibinden':true}, ['complaints'] )|raw }}
+
         </div>
         <ul class="docs list-unstyled mt-3">
             {% for doc in adv.doc_files %}
