--- a/resources/views/ad-detail/main.twig
+++ b/resources/views/ad-detail/main.twig
@@ -61,7 +61,7 @@
                     </div>
                     {% if not setting_value('visiosoft.module.advs::ads_date_hidden') %}
                         <small class="text-muted">
-                            {{ trans('visiosoft.extension.sahibinden_style_provider::field.member_since.name') }} {{ user.created_at|date('F Y') }}
+                            {{ trans('visiosoft.extension.sahibinden_style_provider::field.member_since.name') }} {{ user.created_at|date(config_get('streams::datetime.date_format')) }}
                         </small>
                     {% endif %}
                 </div>
