--- a/resources/views/ad-detail/main.twig
+++ b/resources/views/ad-detail/main.twig
@@ -29,7 +29,7 @@
                    target="_blank" class="a-linkedin-type pl-2">
                     <i class="fab fa-linkedin"></i>
                 </a>
-                <a href="https://wa.me/?text={{ setting_value('visiosoft.extension.sahibinden_style_provider::shareWhatsappMsg')|url_encode }}%20{{ app.request.uri|url_encode }}"
+                <a href="https://wa.me/?text={{ variable_value('sahibinden_theme','sahibinden_security_text') ? variable_value('sahibinden_theme','sahibinden_security_text') : setting_value('visiosoft.theme.sahibinden::shareWhatsappMsg')|url_encode }}%20{{ app.request.uri|url_encode }}"
                    target="_blank" class="a-sahibinden-type pl-2">
                     <i class="fab fa-whatsapp color-whatsapp-icon"></i>
                 </a>
@@ -236,7 +236,11 @@
                             {{ trans('visiosoft.extension.sahibinden_style_provider::field.security_tips.name') }}
                         </h6>
                         <p>
-                            {{ setting_value('visiosoft.extension.sahibinden_style_provider::security_tips_msg') }}
+                            {{
+                            variable_value('sahibinden_theme','sahibinden_security_text')
+                            ? variable_value('sahibinden_theme','sahibinden_security_text') :
+                            setting_value('visiosoft.extension.sahibinden_style_provider::security_tips_msg')
+                            }}
                         </p>
                     </div>
                 {% endif %}
