--- a/resources/views/ad-detail/main.twig
+++ b/resources/views/ad-detail/main.twig
@@ -237,8 +237,7 @@
                         </h6>
                         <p>
                             {{
-                            variable_value('sahibinden_theme','sahibinden_security_text')
-                            ? variable_value('sahibinden_theme','sahibinden_security_text') :
+                            variable_value('sahibinden_theme','sahibinden_security_text') ?:
                             setting_value('visiosoft.extension.sahibinden_style_provider::security_tips_msg')
                             }}
                         </p>
