Added print selection to detail page.

--- a/resources/css/detail.css
+++ b/resources/css/detail.css
@@ -264,6 +264,10 @@
     background: no-repeat 0 0;
 }
 
+.print-button-detail {
+    font-size: 15px;
+}
+
 @media only screen and (min-width: 1200px) {
     #message i {
         display: inline-block;
