--- a/resources/views/ad-detail/partials/content.twig
+++ b/resources/views/ad-detail/partials/content.twig
@@ -75,6 +75,12 @@
                 <!-- Content With Block -->
             </div>
         </div>
+        {% if setting_value('visiosoft.extension.sahibinden_style_provider::enable_print_button') %}
+            <div class="col-md-12 d-none" id="printAd">
+                {% include "visiosoft.theme.base::print/ad.twig" with {"adv" : adv}%}
+                {{ asset_script("visiosoft.theme.base::js/theme/print.js") }}
+            </div>
+        {% endif %}
     </div>
 </div>
 {{ addBlock('ad-detail/section',{'adv':adv})|raw }}
