--- a/resources/views/ad-detail/partials/slider.twig
+++ b/resources/views/ad-detail/partials/slider.twig
@@ -9,7 +9,10 @@
              data-thumbheight="48">
 
             {% if count(adv.files) == 0 %}
-                <a href="{{ img('visiosoft.module.advs::images/no-image.png').url }}"></a>
+                <a data-title="{{ adv.title }}"
+                   data-alt="{{ adv.title }}"
+                   href="{{ img('visiosoft.module.advs::images/no-image.png').url }}">
+                </a>
             {% else %}
                 {% for image in adv.getViewPhotoUrl %}
                     <a href="{{ adv.getMediumPhotoUrl(image) }}"
