--- a/resources/views/ad-detail/main.twig
+++ b/resources/views/ad-detail/main.twig
@@ -240,7 +240,7 @@
                                             </p>
                                         </div>
                                         <div class="d-block d-sm-none">
-                                            {{ addBlock('ad-detail/details',{'adv':adv, 'theme':'sahibinden', 'options':options, 'configurations':configurations},['basic_checkout'])|raw }}
+                                            {{ addBlock('ad-detail/details',{'adv':adv},['basic_checkout'])|raw }}
                                         </div>
                                         <a href="https://wa.me/{{ user.gsm_phone|replace({'+': ""}) }}" target="_blank"
                                            class="whatsapp-link hidden">
